--- a/proj-rabbitmq/pom.xml
+++ b/proj-rabbitmq/pom.xml
@@ -31,7 +31,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
