--- a/proj-zookeeper/src/main/java/log4j.properties
+++ b/proj-zookeeper/src/main/java/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=error, stdout
 log4j.addivity.org.apache=true
 
 log4j.logger.com.github.liyp=debug
-log4j.logger.org.apache=debug
+log4j.logger.org.apache=info
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
