--- a/proj-zookeeper/pom.xml
+++ b/proj-zookeeper/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <curator.version>2.9.1</curator.version>
     </properties>
 
     <dependencies>
@@ -31,17 +32,17 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>3.0.0</version>
+            <version>${curator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>3.0.0</version>
+            <version>${curator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-test</artifactId>
-            <version>3.0.0</version>
+            <version>${curator.version}</version>
         </dependency>
         
         <dependency>
