--- a/mina/pom.xml
+++ b/mina/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <artifactId>mina</artifactId>
     <packaging>jar</packaging>
-    <name>proj-mina</name>
+    <name>${project.artifactId}</name>
     <url>http://maven.apache.org</url>
 
     <properties>
