--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <artifactId>rabbitmq</artifactId>
     <packaging>jar</packaging>
-    <name>proj-rabbitmq</name>
+    <name>${project.artifactId}</name>
     <url>http://maven.apache.org</url>
 
     <properties>
