--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>proj-java</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>proj-spring-boot</artifactId>
+    <artifactId>spring-boot</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <url>http://maven.apache.org</url>
