--- a/netty/src/main/resources/log4j.properties
+++ b/netty/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.logger.com.github.liyp.netty=debug
 # console log output
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%-5p] %c{1} - %m%n      %l%n
+log4j.appender.stdout.layout.ConversionPattern=%d | %-5p | %t | %F\:%L | - %m%n
 
 # rolling file log output
 log4j.appender.rollingfile=org.apache.log4j.RollingFileAppender
@@ -16,4 +16,4 @@ log4j.appender.rollingfile.append=true
 log4j.appender.rollingfile.maxBackupIndex=10
 log4j.appender.rollingfile.maxFileSize=20MB
 log4j.appender.rollingfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.rollingfile.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss} %l - %m%n
+log4j.appender.rollingfile.layout.ConversionPattern=%d | %-5p | %t | %F\:%L | - %m%n
