--- a/cassandra/src/main/resources/log4j.properties
+++ b/cassandra/src/main/resources/log4j.properties
@@ -3,8 +3,8 @@ log4j.rootLogger=INFO, stdout
 log4j.addivity.org.apache=true
 
 log4j.logger.com.github.liyp.cassandra=debug
-log4j.logger.com.datastax.driver.core=trace
-log4j.logger.com.datastax.driver.mapping=trace
+#log4j.logger.com.datastax.driver.core=trace
+#log4j.logger.com.datastax.driver.mapping=trace
 
 # console log output
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
